--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">OMDB Demo</string>
+    <string name="title_activity_movie_detail">MovieDetailActivity</string>
 </resources>
