--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">OMDB Demo</string>
     <string name="title_activity_movie_detail">MovieDetailActivity</string>
+    <string name="imdb_rating_label">Avaliação iMDB: %s</string>
 </resources>
